# Xoria

./: .gitignore  CMakeLists.txt  README.md  TODO  Xoria.pro  xoria.pro
cmake/Modules/: FindLIBTCOD.cmake  FindLIBTCODXX.cmake
design/: class_diagram.uxf
include/: constants.h  coord.h  entity.h  game.h  map.h  mapobject.h  monster.h  player.h  playscreen.h  properties.h  tile.h  tui.h  utility.h  world.h
src/: CMakeLists.txt  constants.h  constants.hpp  coord.cpp  coord.hpp  engine.cpp  engine.h  entity.cpp  entity.hpp  game.cpp  game.h  game.hpp  main.cpp  map.cpp  map.h  map.hpp  mapobject.cpp  mapobject.hpp  monster.cpp  monster.hpp  player.cpp  player.hpp  playscreen.cpp  playscreen.h  playscreen.hpp  properties.cpp  properties.hpp  tile.cpp  tile.h  tile.hpp  tui.cpp  tui.h  tui.hpp  utility.cpp  utility.hpp  world.cpp  world.h  world.hpp
